# agents-deep-research

./: .env.example  LICENSE  README.md  a2as.yaml  pyproject.toml  setup.py
deep_researcher/: iterative_research.py  llm_client.py  llm_config.py
deep_researcher/agents/: knowledge_gap_agent.py  long_writer_agent.py  proofreader_agent.py  thinking_agent.py  tool_selector_agent.py  writer_agent.py
deep_researcher/agents/tool_agents/: __init__.py
deep_researcher/tools/: web_search.py
deep_researcher/utils/: citation_manager.py
examples/: iterative_example.py
tests/: config.py
